[update] profile & preview

--- a/assets/css/v1/icon.styl
+++ b/assets/css/v1/icon.styl
@@ -236,6 +236,23 @@
         &.qz-icon-2x
             background-image: url("../img/2x/profile-password.png")
 
+    // player
+    &.qz-icon-player-play
+        width: 20px 
+        height: 24px
+        background-size: 20px 24px;
+        background-image: url("../img/1x/player-play.png")
+        &.qz-icon-2x
+            background-image: url("../img/2x/player-play.png")
+
+    &.qz-icon-player-pause
+        width: 20px 
+        height: 24px
+        background-size: 20px 24px;
+        background-image: url("../img/1x/player-pause.png")
+        &.qz-icon-2x
+            background-image: url("../img/2x/player-pause.png")
+
 .flex.qz-active:hover
     .qz-icon
         &.qz-icon-check.qz-active
