--- a/assets/css/v1/uploadlist.styl
+++ b/assets/css/v1/uploadlist.styl
@@ -26,6 +26,9 @@
                 letter-spacing: 0.58px;
                 margin: 0
     .qz-list
+        height: 320px
+        overflow-x: hidden
+        overflow-y: auto
         padding: 0
         .v-list__tile__avatar
             min-width: 48px
@@ -69,6 +72,7 @@
             align-items: center;
             flex-direction: row;
             justify-content: flex-end;
+            padding-right: 12px;
             .v-btn
                 width: 20px
                 height: 20px
