[update] add video progress

--- a/assets/css/v1/preview.styl
+++ b/assets/css/v1/preview.styl
@@ -28,9 +28,11 @@
         .qz-preview-progress, .qz-preview-controller
             width: 100%
         .qz-preview-progress
-            z-index: 2
+            z-index: 1
             min-height: 24px
             max-height: 24px
+            .v-input--slider
+                margin: 0
         .qz-preview-controller
             z-index: 1
             min-height: 48px
