[update] player seek,volume,quality

--- a/assets/css/v1/icon.styl
+++ b/assets/css/v1/icon.styl
@@ -253,6 +253,23 @@
         &.qz-icon-2x
             background-image: url("../img/2x/player-pause.png")
 
+    &.qz-player-volume
+        width: 22px 
+        height: 22px
+        background-size: 22px 22px;
+        background-image: url("../img/1x/player-volume.png")
+        &.qz-icon-2x
+            background-image: url("../img/2x/player-volume.png")
+
+    &.qz-player-fullscreen
+        width: 24px 
+        height: 24px
+        background-size: 24px 24px;
+        background-image: url("../img/1x/player-fullscreen.png")
+        &.qz-icon-2x
+            background-image: url("../img/2x/player-fullscreen.png")
+
+
 .flex.qz-active:hover
     .qz-icon
         &.qz-icon-check.qz-active
@@ -283,5 +300,9 @@
             background-image: url("../img/1x/recycle.active.png")
             &.qz-icon-2x
                 background-image: url("../img/2x/recycle.active.png")
+        &.qz-player-fullscreen
+            background-image: url("../img/1x/player-fullscreen-active.png")
+            &.qz-icon-2x
+                background-image: url("../img/2x/player-fullscreen-active.png")
 
         
